# HiPhase

./: CHANGELOG.md  CITATION.bib  Cargo.toml  LICENSE-THIRDPARTY.json  README.md  build.rs
docs/: install.md  methods.md  performance.md  user_guide.md
src/: astar_phaser.rs  block_gen.rs  cli.rs  lib.rs  main.rs  phaser.rs  read_parsing.rs  sequence_alignment.rs  wfa_graph.rs
src/data_types/: mod.rs  read_segments.rs  reference_genome.rs  variants.rs
src/writers/: block_stats.rs  haplotag_writer.rs  mod.rs  ordered_bam_writer.rs  ordered_vcf_writer.rs  phase_stats.rs  vcf_util.rs
test_data/: header_only.bam  header_only.bam.bai  multi_smrtcell.bam  multisample.bam  test_reference.fa
test_data/iupac_test/: small_variants.vcf.gz.tbi  test_reference.fa
test_data/prephased_test/: prephased.vcf
